[gd_scene load_steps=7 format=3 uid="uid://d33cjyav8iekb"]

[ext_resource type="Script" path="res://Menu/Settings/settings.gd" id="1_31bi7"]
[ext_resource type="Shader" path="res://Menu/Settings/settings.gdshader" id="2_4ap2s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lyqd7"]
shader = ExtResource("2_4ap2s")
shader_parameter/amount = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0cjod"]
shader = ExtResource("2_4ap2s")
shader_parameter/amount = 5.0

[sub_resource type="LabelSettings" id="LabelSettings_sv1wu"]
font_size = 40
font_color = Color(0, 0.454902, 0.792157, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2tim1"]
font_size = 30

[node name="Settings" type="Control"]
process_mode = 3
material = SubResource("ShaderMaterial_lyqd7")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_31bi7")

[node name="PanelContainer" type="PanelContainer" parent="."]
material = SubResource("ShaderMaterial_0cjod")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -540.0
offset_right = 480.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VideoLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Video Settings"
label_settings = SubResource("LabelSettings_sv1wu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VideoSettingsContainer" type="GridContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="UIScaleLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "UI Scale:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="UIScaleSlider" type="HSlider" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.25
max_value = 2.0
step = 0.05
value = 1.0

[node name="ResolutionScaleLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolution Scale:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="ResolutionScaleSlider" type="HSlider" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.25
max_value = 2.0
step = 0.05
value = 1.0

[node name="DisplayFilterLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Display Filter:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="DisplayFilterMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Bilinear(Fastest)"
popup/item_0/id = 0
popup/item_1/text = "FSR 1.0(Fast)"
popup/item_1/id = 1

[node name="FSRSharpLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "FSR Sharpness:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="FSRSharpSlider" type="HSlider" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.0
step = 0.2
value = 0.2

[node name="FullscreenLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fullscreen:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="FullscreenMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1

[node name="VSyncLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "V-Sync:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="VSyncMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Adaptive"
popup/item_1/id = 1
popup/item_2/text = "Enabled"
popup/item_2/id = 2

[node name="TAALabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Anti-Aliasing(TAA):"
label_settings = SubResource("LabelSettings_2tim1")

[node name="TAAMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled(Currently Broken)"
popup/item_1/id = 1

[node name="MSAALabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Anti-Aliasing(MSAA):"
label_settings = SubResource("LabelSettings_2tim1")

[node name="MSAAMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Disabled(Fastest)"
popup/item_0/id = 0
popup/item_1/text = "2x(Average)"
popup/item_1/id = 1
popup/item_2/text = "4x(Slow)"
popup/item_2/id = 2
popup/item_3/text = "8x(Slower)"
popup/item_3/id = 3

[node name="FXAALabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Anti-Aliasing(FXAA):"
label_settings = SubResource("LabelSettings_2tim1")

[node name="FXAAMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Disabled(Fastest)"
popup/item_0/id = 0
popup/item_1/text = "Enabled(Fast)"
popup/item_1/id = 1

[node name="QualityLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Quality Settings"
label_settings = SubResource("LabelSettings_sv1wu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QualitySettingsContainer" type="GridContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="ShadowResLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/QualitySettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shadow Resolution:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="ShadowResMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/QualitySettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 6
selected = 3
popup/item_0/text = "Minimum(Fastest"
popup/item_0/id = 0
popup/item_1/text = "Very Low(Faster)"
popup/item_1/id = 1
popup/item_2/text = "Low(Fast)"
popup/item_2/id = 2
popup/item_3/text = "Medium(Average)"
popup/item_3/id = 3
popup/item_4/text = "High(Slow)"
popup/item_4/id = 4
popup/item_5/text = "Ultra(Slowest)"
popup/item_5/id = 5

[node name="ShadowFilterLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/QualitySettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shadow Filtering:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="ShadowFilterMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/QualitySettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 6
selected = 2
popup/item_0/text = "Minimum(Fastest)"
popup/item_0/id = 0
popup/item_1/text = "Low(Faster)"
popup/item_1/id = 1
popup/item_2/text = "Medium(Fast)"
popup/item_2/id = 2
popup/item_3/text = "High(Average)"
popup/item_3/id = 3
popup/item_4/text = "Very High(Slow)"
popup/item_4/id = 4
popup/item_5/text = "Ultra(Slowest)"
popup/item_5/id = 5

[node name="VoxelGILabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/QualitySettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Voxel GI:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="VoxelGIMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/QualitySettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "Disabled(Fastest)"
popup/item_0/id = 0
popup/item_1/text = "Enabled(Slow)"
popup/item_1/id = 1

[node name="ModelQualityLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/QualitySettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Model Quality:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="ModelQualityMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/QualitySettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
selected = 2
popup/item_0/text = "Low(Fastest)"
popup/item_0/id = 0
popup/item_1/text = "Medium(Fast)"
popup/item_1/id = 1
popup/item_2/text = "High(Average)"
popup/item_2/id = 2
popup/item_3/text = "Ultra(Slow)"
popup/item_3/id = 3

[node name="EffectsLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Effect Settings"
label_settings = SubResource("LabelSettings_sv1wu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectSettingsContainer" type="GridContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="GlobalIllumLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Global Illumination:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="GlobalIllumMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 1
popup/item_0/text = "Disabled(Not Recommended)"
popup/item_0/id = 0
popup/item_1/text = "Low(Average)"
popup/item_1/id = 1
popup/item_2/text = "High(Slow)"
popup/item_2/id = 2

[node name="BloomLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bloom:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="BloomMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 1
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled(Recommended)"
popup/item_1/id = 1

[node name="AmbOcclabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ambient Occlusion:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="AmbOccMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 5
selected = 2
popup/item_0/text = "Disabled(Fastest)"
popup/item_0/id = 0
popup/item_1/text = "Very Low(Faster)"
popup/item_1/id = 1
popup/item_2/text = "Low(Fast)"
popup/item_2/id = 2
popup/item_3/text = "Medium(Average)"
popup/item_3/id = 3
popup/item_4/text = "High(Slow)"
popup/item_4/id = 4

[node name="SSRLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Screen-Space Reflections:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="SSRMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
selected = 1
popup/item_0/text = "Disabled(Fastest)"
popup/item_0/id = 0
popup/item_1/text = "Low(Average)"
popup/item_1/id = 1
popup/item_2/text = "Medium(Slow)"
popup/item_2/id = 2
popup/item_3/text = "High(Slow)"
popup/item_3/id = 3

[node name="SSLLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Screen-Space Lighting:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="SSLMenu" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 5
selected = 2
popup/item_0/text = "Disabled(Fastest)"
popup/item_0/id = 0
popup/item_1/text = "Very Low(Fast)"
popup/item_1/id = 1
popup/item_2/text = "Low(Average)"
popup/item_2/id = 2
popup/item_3/text = "Medium(Slow)"
popup/item_3/id = 3
popup/item_4/text = "High(Slowest)"
popup/item_4/id = 4

[node name="AdjustmentsLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Adjustments"
label_settings = SubResource("LabelSettings_sv1wu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AdjustmentsContainer" type="GridContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="BrightnessLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/AdjustmentsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Brightness:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="BrightnessSlider" type="HSlider" parent="PanelContainer/ScrollContainer/VBoxContainer/AdjustmentsContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 2.0
step = 0.01
value = 1.0

[node name="ContrastLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/AdjustmentsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Contrast:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="ContrastSlider" type="HSlider" parent="PanelContainer/ScrollContainer/VBoxContainer/AdjustmentsContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 2.0
step = 0.01
value = 1.0

[node name="SaturationLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/AdjustmentsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Saturation:"
label_settings = SubResource("LabelSettings_2tim1")

[node name="SaturationSlider" type="HSlider" parent="PanelContainer/ScrollContainer/VBoxContainer/AdjustmentsContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.01
max_value = 2.0
step = 0.01
value = 1.0

[node name="SaveButton" type="Button" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "Save"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="PanelContainer/ScrollContainer/VBoxContainer/SaveButton"]
title = "Confirm Save Settings"
position = Vector2i(772, 463)
size = Vector2i(363, 159)
popup_window = true
ok_button_text = "Save Changes"
dialog_text = "Are these settings agreeable?"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 92.0
offset_top = -110.0
offset_right = 430.0
offset_bottom = -28.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Clock Out"

[node name="QuitConfirmation" type="ConfirmationDialog" parent="QuitButton"]
title = "Clock Out"
position = Vector2i(772, 463)
size = Vector2i(363, 159)
popup_window = true
ok_button_text = "Confirm"
dialog_text = "Did you earn your paycheck, scum?
Press Confirm to clock out, #1455."

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 92.0
offset_top = -257.0
offset_right = 430.0
offset_bottom = -175.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[node name="MenuConfirmation" type="ConfirmationDialog" parent="MainMenuButton"]
title = "Return to Main Menu?"
position = Vector2i(772, 463)
size = Vector2i(363, 159)
popup_window = true
ok_button_text = "Confirm"
dialog_text = "Really...?"

[connection signal="value_changed" from="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer/UIScaleSlider" to="." method="_on_ui_scale_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer/ResolutionScaleSlider" to="." method="_on_resolution_scale_slider_value_changed"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer/DisplayFilterMenu" to="." method="_on_display_filter_menu_item_selected"]
[connection signal="value_changed" from="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer/FSRSharpSlider" to="." method="_on_fsr_sharp_slider_value_changed"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer/FullscreenMenu" to="." method="_on_fullscreen_menu_item_selected"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer/VSyncMenu" to="." method="_on_v_sync_menu_item_selected"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer/TAAMenu" to="." method="_on_taa_menu_item_selected"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer/MSAAMenu" to="." method="_on_msaa_menu_item_selected"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/VideoSettingsContainer/FXAAMenu" to="." method="_on_fxaa_menu_item_selected"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/QualitySettingsContainer/ShadowResMenu" to="." method="_on_shadow_res_menu_item_selected"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/QualitySettingsContainer/ShadowFilterMenu" to="." method="_on_shadow_filter_menu_item_selected"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/QualitySettingsContainer/VoxelGIMenu" to="." method="_on_voxel_gi_menu_item_selected"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/QualitySettingsContainer/ModelQualityMenu" to="." method="_on_model_quality_menu_item_selected"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer/GlobalIllumMenu" to="." method="_on_global_illum_menu_item_selected"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer/BloomMenu" to="." method="_on_bloom_menu_item_selected"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer/AmbOccMenu" to="." method="_on_amb_occ_menu_item_selected"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer/SSRMenu" to="." method="_on_ssr_menu_item_selected"]
[connection signal="item_selected" from="PanelContainer/ScrollContainer/VBoxContainer/EffectSettingsContainer/SSLMenu" to="." method="_on_ssl_menu_item_selected"]
[connection signal="value_changed" from="PanelContainer/ScrollContainer/VBoxContainer/AdjustmentsContainer/BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/ScrollContainer/VBoxContainer/AdjustmentsContainer/ContrastSlider" to="." method="_on_contrast_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/ScrollContainer/VBoxContainer/AdjustmentsContainer/SaturationSlider" to="." method="_on_saturation_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/ScrollContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="confirmed" from="PanelContainer/ScrollContainer/VBoxContainer/SaveButton/ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="confirmed" from="QuitButton/QuitConfirmation" to="." method="_on_quit_confirmation_confirmed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="confirmed" from="MainMenuButton/MenuConfirmation" to="." method="_on_menu_confirmation_confirmed"]
